--- a/m08uf5/pagines_html/pag1.html
+++ b/m08uf5/pagines_html/pag1.html
@@ -8,7 +8,7 @@
 
    <body>
     
-    <h1>Aixo es la pagina 1</h1>
+    <h1>Aixo es la pagina 1.</h1>
     <img src="../imatges/musc1.jpg" alt="musculator">
     <p><a href="../index.html">Link a index</a></p>
     <p><a href="../pagines_html2/pag2.html" >Link a pag2.html</a></p>
