--- a/m08uf5/pagines_html/list.html
+++ b/m08uf5/pagines_html/list.html
@@ -10,7 +10,7 @@
    <body>
      <h3>Lista de clase</h3>
       <ul> <!--unordered list -->
-        <li>Enric Murillo</li> <!--List Items-->
+        <li>Enric Murillo.</li> <!--List Items-->
         <li>Jose Luis Garrido</li>
         <li>Mauricio Cedamanos</li>
       </ul>
