--- a/m08uf5/pagines_html/pag1.html
+++ b/m08uf5/pagines_html/pag1.html
@@ -4,11 +4,12 @@
    <head>
       <meta charset="utf-8"/>
       <title>Hello World</title>
+      <link rel="stylesheet" href="../CSS/pag1.css">
    </head>
 
    <body>
     
-    <h1>Aixo es la pagina 1.</h1>
+    <h1>Aixo es la <span>pagina 1</span>.</h1>
     <img src="../imatges/musc1.jpg" alt="musculator">
     <p><a href="../index.html">Link a index</a></p>
     <p><a href="../pagines_html2/pag2.html" >Link a pag2.html</a></p>
@@ -16,6 +17,8 @@
 
 
     <img src="../imatges/valpag1.PNG" alt="validador">
+
+    
    </body>
 
  </html>
