Fonts Google exercici fonts.html

--- a/m08uf5/pagines_html/pag1.html
+++ b/m08uf5/pagines_html/pag1.html
@@ -18,7 +18,7 @@
 
     <img src="../imatges/valpag1.PNG" alt="validador">
 
-    
+    <img src="../imatges/ex1validacion.PNG">  
    </body>
 
  </html>
