--- a/m08uf5/index.html
+++ b/m08uf5/index.html
@@ -15,8 +15,13 @@
     <p>això es un paragraf</p>
     <!-- _BLANK ES OBRIR LA PAGINA AMB UNA FINESTRA NOVA-->
     <p><a href="https://www.google.com/?hl=es" target="_blank">GOOGLE</a></p>
-    <p><a href="pagines_html2/pag2.html">Link a pag2.html</a></p>
-    <p><a href="pagines_html/pag1.html">Link a pag1.html</a></p>
+    <p><a href="paginesWeb/pag2.html">Link a pag2.html</a></p>
+    <p><a href="paginesWeb/pag1.html">Link a pag1.html</a></p>
+    <ul>
+      <li><a href="paginesWeb/list.html">Listas</a></li>
+      <li><a href="paginesWeb/table.html">Tablas</a></li>
+      <li><a href="paginesWeb/fonts.html">Fuentes</a></li>
+    </ul>
    </body>
 
  </html>
