--- a/m08uf5/paginesWeb/fonts.html
+++ b/m08uf5/paginesWeb/fonts.html
@@ -13,8 +13,8 @@
    <body>
     
     <h1>Provant fonts de lletra</h1>
-    <p id="fontvina">lletra Vina sans</p>
-    <p id="latofont">lletra Lato</p>
+    <p id="fontvina">lletra Vina sans bajando el fichero ttf al ordenador</p>
+    <p id="latofont">lletra Lato de google fonts pero con los links en el h</p>
     <p>lletra Vina sans</p>
    </body>
 
