--- a/CodigoClase/index.html
+++ b/CodigoClase/index.html
@@ -22,6 +22,14 @@
       <li><a href="paginesWeb/table.html">Tablas</a></li>
       <li><a href="paginesWeb/fonts.html">Fuentes</a></li>
     </ul>
+    Codi classe posicionament
+    <ul>
+      <li><a href="paginesWeb/position.html">Posicionament relative</a></li>
+      <li><a href="paginesWeb/float.html">Posicionamiento Flotant /a></li>
+      <li><a href="paginesWeb/flotant_percent.html">Posicionament flotant</a></li>
+      <li><a href="paginesWeb/grid_lauout.html">Grid Layout</a></li>
+    </ul>
+
    </body>
 
  </html>
