Codi per iniciar p6

--- a/CodigoClase/index.html
+++ b/CodigoClase/index.html
@@ -29,7 +29,10 @@
       <li><a href="paginesWeb/flotant_percent.html">Posicionament flotant</a></li>
       <li><a href="paginesWeb/grid_lauout.html">Grid Layout</a></li>
     </ul>
-
+    Codi de prova P6 fet a classe
+    <ul>
+      <li><a href="paginesWeb/p6.html">P6</a></li>      
+    </ul>
    </body>
 
  </html>
