--- a/CodigoClase/index.html
+++ b/CodigoClase/index.html
@@ -12,8 +12,10 @@
         <li><a href="html/pagina2.html">Pagina2</a></li>
         <li><a href="html/listas.html">Listas</a></li>
         <li><a href="html/taules.html">Taules Span Class</a></li>
-        
-
+        <li><a href="html/fonts.html">Fonts lletres</a></li>
+        <li><a href="html/provesFormulari.html">Formulari profe</a></li>
+        <li><a href="html/caixes.html">Modelo cajas HTML</a></li>
+        <li><a href="html/flotant_percent.html">exercici 1 posicionamiento flotante</a></li>
     </ul>
 </body>
 </html>
